# rbat

./: .dockerignore  .env.example  .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  docker-compose.yml
.github/workflows/: ci-client.yml  ci-rust.yml  ci.yml  publish.yml  stable-release.yml  test-pat.yml
assets/: blacklisted_mnemonics.txt  blacklisted_process_injec.txt  packer_signatures.yar  suspicious_strings.yar
proto/: transfer.proto
rbat-client/: .dockerignore  Dockerfile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
rbat-client/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
rbat-client/app/api/ai/insight/: route.ts
rbat-client/app/api/events/: route.ts
rbat-client/app/api/upload/: route.ts
rbat-client/app/api/webhook/: route.ts
rbat-client/components/block/: ai-insight.tsx  analysis-header.tsx  binary-composition.tsx  file-metrics.tsx  footer.tsx  navbar.tsx  paths-network.tsx  risk-assessment.tsx  strings-snapshot.tsx  upload-zone.tsx  vulnerability-findings.tsx
rbat-client/components/template/: dashboard.tsx
rbat-client/components/ui/: data-row.tsx  entropy-heatmap.tsx  format-badge.tsx  risk-gauge.tsx  severity-badge.tsx  transition-wrapper.tsx
rbat-client/lib/: events.ts  grpc-client.ts  logger.ts  redis.ts  store.ts
rbat-client/lib/proto/: transfer.ts
rbat-client/lib/proto/transfer/: Analysis.ts  UploadRequest.ts  UploadResponse.ts
rbat-client/lib/store/: analysis-store.ts
rbat-core/: Cargo.toml  README.md
rbat-core/assets/: api_hooking.yar  api_hooking_apis.txt  blacklisted_mnemonics.txt  blacklisted_process_injec.txt  packer_signatures.yar  suspicious_strings.yar
rbat-core/assets/rules/: detect_anti_debugging.json  detect_api_hashing.json  detect_api_hooking.json  detect_code_caves.json  detect_direct_syscalls.json  detect_high_entropy.json  detect_packed_binary.json  detect_persistence_registry.json  detect_process_hollowing.json  detect_process_injection.json  detect_ransomware_shadowcopy_deletion.json  detect_shellcode_staging.json
rbat-core/assets/yara/: suspicious_strings.yar
rbat-core/src/: lib.rs  main.rs
rbat-core/src/core/: analyzer.rs  cfg.rs  cli.rs  disassembler.rs  error.rs  features.rs  heuristics.rs  mod.rs  parser.rs  plugins.rs  rule.rs  traits.rs  tui.rs  types.rs  yarahandler.rs
rbat-core/src/rbat/: disassembler.rs  mod.rs  parser.rs
rbat-core/src/utils/: analyzer.rs  cfg.rs  csv.rs  entropy.rs  get_metadata.rs  get_txt.rs  json.rs  mod.rs  pdf.rs  raw_padding.rs  rules.rs  rules_cli.rs  scoring.rs  section_offset.rs  stream_error_helper.rs  terminal_report.rs  test_helpers.rs  viz.rs
rbat-core/templates/: report.css  report.html
rbat-server/: Cargo.toml  Dockerfile  README.md  build.rs
rbat-server/src/: lib.rs  main.rs
rbat-server/src/handlers/: grpc_service.rs  mod.rs  webhook.rs
rbat-server/src/services/: analyzer_service.rs
rbat-server/src/utils/: log_time.rs  minio_client.rs  mod.rs  shutdown_signal.rs  webhook_sender.rs
scripts/: bump-version.js  deploy.sh  prepare-server-publish.js  run-integration-tests.sh  validate-release.sh
src/: error.rs  main.rs  prelude.rs  traits.rs  types.rs
src/rbat/: cli.rs  disassembler.rs  mod.rs  parser.rs  traits.rs  tui.rs  yarahandler.rs
src/utils/: analyzer.rs  csv.rs  entropy.rs  get_metadata.rs  get_txt.rs  json.rs  mod.rs  pdf.rs  scoring.rs  section_offset.rs  test_helpers.rs  viz.rs
templates/: report.css  report.html
