[workspace]
members = ["rbat-core", "rbat-server"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.52.3", features = ["full"] }
tui-banner = "0.2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
indicatif = "0.18.4"
chrono = "0.4.44"
color-eyre = "0.6.3"

[profile.release]
opt-level = 3       
lto = true          
strip = true        
codegen-units = 1