[workspace]
members = ["rbat-core", "rbat-server"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.52.3", features = ["full"] }
rayon = "1.12.0"
tui-banner = "0.2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
yaml_serde = "0.10"
thiserror = "2.0.18"
indicatif = "0.18.4"
chrono = "0.4.44"
color-eyre = "0.6.3"
tracing = "0.1"
tracing-indicatif = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3       
lto = true          
strip = true        
codegen-units = 1